--- a/notes/08_集合.md
+++ b/notes/08_集合.md
@@ -259,13 +259,139 @@ p.s `rust` 的字符串是相对复杂的概念，它选择将正确处理 Strin
 
 # HashMap<K, V>
 
+键值对类似 Python 里面的 `dict`，通过将一个 value 与一个 key 对应的形式存储数据，Hash 函数决定如何在内存中存放 K 和 V，创建和添加数据的方法如下
+
+```rust
+use std::collections::HashMap;
+
+let mut map: HashMap<String, i32> = HashMap::new();  // 创建空的 HashMap
+map.insert(String::from("key"), 100);
+```
+
+类似 Vector 的意思，如果是空的，那编译器无法推断类型，所以需要另外声明类型属性，如果里面存了值就不需要了。以下是 HashMap 的几个特性：
+
+1. 他比较少用到，就不在 `Prelude`中，需要另外引入
+2. 标准库对其支援较少，没有内置的宏（macro）来创建它
+3. 数据一样是存在 Heap 的
+4. 在同一个 HashMap 中，所有的 key 必须是同一种类型，同理 value。
 
 
 
+## 创建 HashMap 的方法 - collect
+
+在元素类型为 Tuple 的 Vector 上使用 `collect` 方法，即可组建一个 `HashMap`，特殊要求如下：
+
+1. Tuple 有两个值组成一个元素，前者用作 `key` 后者用作 `value`
+2. 使用 `collect` 方法的时候需要显式指明类型
+
+```rust
+let colors = vec![String::from("red"), String::from("blue")];
+let values = vec![10, 50];
+
+// HashMap<_, _> is necessary to add up.
+let combine: HashMap<_, _> = colors.iter().zip(values.iter()).collect();
+```
 
 
 
+## HashMap 的所有权
 
+对于实现了 Copy trait 类型（如：`i32`），值会被复制到 HashMap 中，而对于拥有所有权的值（如：`String`），其所有权会被转移给 HashMap，例如：
+
+```rust
+let key = String::from("color");
+let value = String::from("orange");
+
+let mut map = HashMap::new();
+map.insert(key, value);
+
+println!("key: {}, value: {}", key, value)  // Wrong
+```
+
+如果再呼叫这些变量就会报错，如果要避免这种情况发生，那就必须把引用传入其中，而非值本身。
+
+```rust
+map.insert(&key, &value);
+
+println!("key: {}, value: {}", key, value)  // Correct
+```
+
+不过这么做的话就必须保证 HashMap 有效的期间内，被引用的值也得有效才行。
+
+
+
+## 获取 HashMap 的值
+
+使用 `get` 方法即可，传入 `key` 参数的引用，返回 `Option<&T>` 枚举，搭配匹配使用比较安全
+
+```rust
+let mut scores = HashMap::new();
+scores.insert(String::from("blue"), 10);
+scores.insert(String::from("green"), 50);
+
+let blue = String::from("blue");
+let score = scores.get(&blue);
+
+match score {
+  Some(s) => println!("score: {}", s),
+  None => println!("color not exist"),
+}
+```
+
+
+
+## HashMap 内容遍历
+
+使用 `for` 循环实现，如果希望值不要发生所有权转移，使用引用的形式来进行即可。
+
+```rust
+for (key, value) in &scores {
+  println!("key: {}, value: {}", key, value);
+}
+```
+
+
+
+## 更新 HashMap
+
+里面保存的数据每一个 key 只能对应一个 value，如果要更新里面保存的数据，则有以下三种可能：
+
+1. 替换现有的 value
+2. 保留现有的 value，忽略新的 value
+3. 合并现有与新的的 values
+
+```rust
+let mut scores = HashMap::new();
+scores.insert(String::from("blue"), 10);
+scores.insert(String::from("blue"), 50);  // 1st 替换
+```
+
+```rust
+let mut scores = HashMap::new();
+scores.insert(String::from("blue"), 10);
+
+// object type: Entry(VacantEntry(...))
+scores.entry(String::from("blue")).or_insert(50);
+scores.entry(String::from("green")).or_insert(100);  // 2nd 如果不存在才添加
+```
+
+```rust
+let text = "hello world new world";
+let mut map = HashMap::new();
+
+for t in text.split_whitespace() {
+  let count = map.entry(t).or_insert(0);  // 3rd 如果不存在就填 0
+  *count += 1;                            // 如果存在就解引用并 +1
+}
+
+println!("map: {:#?}", map);
+```
+
+
+
+## Hash 函数加密
+
+默认情况下，HashMap 使用加密功能强大的 Hash 函数保护，可以抵抗拒绝服务 （DoS）攻击，虽然它并不是最快的 Hash 算法，但具有更好的安全性，可以通过制定不同的 hasher 来切换到另一个函数使用。
 
 
 
