--- a/notes/01_环境与基本概念.md
+++ b/notes/01_环境与基本概念.md
@@ -1,5 +1,7 @@
 # 概述
-... more
+学习影片来源：[Rust 编程语言入门教程 [2021\]](https://www.youtube.com/watch?v=e3-2uxHhbzs&list=PL3azK8C0kje1DUJbaOqce19j3R_-tIc4_)
+
+
 
 # 基本概念
 + 变量
@@ -66,7 +68,7 @@ println!("guess: {}", guess);
 整数类型没有小数部分，没有符号 (`-`) 的整数以 u 开头，有的话就以 i 开头
 
 | Length | Signed | Unsigned | Float | Complex |
-| --- | --- |  --- |  --- |  --- | 
+| --- | --- |  --- |  --- |  --- |
 | 8-bit | `i8` | `u8` | $\times$ |  |
 | 16-bit | `i16` | `u16` | `f16` |  |
 | 32-bit | `i32` (default) | `u32` | `f32` |  |
@@ -78,7 +80,7 @@ println!("guess: {}", guess);
 + `Unsigned`: $0 \sim 2^{n} - 1$. eg. u8 = 0 ~ 255
 
 | 整数字面值 | 范例 |
-| --- | --- | 
+| --- | --- |
 | Decimal | `98_222` |
 | Hex | `0xff` |
 | Octal | `0o77` |
