--- a/notes/10_生命周期.md
+++ b/notes/10_生命周期.md
@@ -68,4 +68,191 @@ fn longest<'a>(x: &'a str, y: &'a str) -> &'a str {
 }
 ```
 
-由于 `x` 和`y` 两个参数的生命周期是不知道的，也不知道输出参数的生命周期，因此无法比较作用域来确认代码是否合规，借用检查器也就无法做到，这时候只能通过 `'a` 来手动确认他们有着同样的生命周期。
+由于 `x` 和`y` 两个参数的生命周期是不知道的，也不知道输出参数的生命周期，因此无法比较作用域来确认代码是否合规，借用检查器也就无法做到，这时候只能通过 `'a` 来手动确认他们有着同样的生命周期，从输入到输出的参数都必须有着至少完整重叠的生命周期，当两个参数传入的时候，`'a` 的生命周期就是所有参数的交集，也就是比较短的那个生命周期，而输出的参数只要在这个有限的生命周期内，就都是一个有效合法的代码。
+
+
+
+### 有效的周期
+
+这样 `'a` 的生命周期就是比较短的 `s2`，由于 `res` 没有超过 `s2`，整个代码是可运行的。
+
+```rust
+let s1 = String::from("string1");
+{
+  let s2 = "xyz";
+  let res = longest(s1.as_str(), s2);
+  println!("The longest string is {}", res);
+}
+```
+
+
+
+### 错误的周期
+
+如果把 `res` 搬出 `{}` 去，如下代码，就会造成生命周期错位，导致代码错误：
+
+```rust
+let s1 = String::from("string1");
+let res;
+{
+  let s2 = String::from("xyz");
+  let res = longest(s1.as_str(), s2.as_str());
+  println!("The longest string is {}", res);    // 位置 1
+}
+println!("The longest string is {}", res);      // 位置 2
+```
+
+不论位置放在哪里，都是错误的。
+
+
+
+---
+
+
+
+指定生命周期参数的方式依赖于函数所做的事情，从函数返回引用时，返回类型的生命周期参数需要与其中一个参数的生命周期匹配：
+
+```rust
+fn longest<'a>(x: &'a str, y: &'a str) -> &'a str {
+  if x.len() > y.len() {
+    x
+  } else {
+    y
+  }
+}
+```
+
+由于输出可能有多个选择，因此生命周期在所有参数都需要定义，不过如果输出只有一个的话，那另一个参数就可以不用标记生命周期标注：
+
+```rust
+fn longest<'a>(x: &'a str, y: &str) -> &'a str {
+  x
+}
+```
+
+从函数返回引用时，返回类型的生命周期参数必须与其中一个参数的生命周期匹配，而如果返回的引用没有指向任何参数，他只能引用函数内创建的值 —> 悬垂引用发生（该值在函数结束时就走出了作用域），例如这么写就是错误写法：
+
+```rust
+fn longest<'a>() -> &'a str {
+  let res = String::from("abc");
+  res.as_str()
+}
+
+let res = longest();
+println!("the longest output: {}", res);
+```
+
+解决方式也很简单，不让输出的生命周期与输入一致即可：
+
+```rust
+fn longest() -> String {
+  let res = String::from("abc");
+  res
+}
+```
+
+所以其实这些标注 `'a` 只是为了让编译器有更多的信息来判定不同参数之间的生命周期关系，保证他们在内存的工作中是绝对正确的。
+
+
+
+# `Struct` 中的生命周期标注
+
+结构体里同样也可以有生命周期标注，需要在引用上添加即可，方法如下：
+
+```rust
+struct NewStruct<'a> {
+  attr: &'a str,
+}
+```
+
+这么定义结构体的意思是说，里面的引用必须比结构体本身存活的时间长，例如下面的例子：
+
+```rust
+let novel = String::from("this is a novel");
+let first = novel.split('.')
+  .next()
+  .expect("could not found a '.'");
+
+let i = NewStruct { attr: first };
+```
+
+但其实这样有点废话，肯定得先声明一个变量才把它放入结构体，因此其实是有省略的方法的，引用分析中所编入的模式称为生命周期省略规则，这是 `Rust` 团队在编写代码的时候从实战中总结出来的经验，这些特殊情况由编译器考虑即可。
+
+
+
+# 生命周期的省略
+
+编译器使用 3 个规则在没有显示标注生命周期的情况下，来确定引用的生命周期，规则1 用于输入生命周期，规则2/3 用于输出生命周期，如果用完这三个规则还是无法确定生命周期的话，就报错：
+
+1. 每个引用类型的参数都有自己的生命周期
+2. 如果只有一个输入生命周期参数，那么该生命周期被赋给所有的输出生命周期参数
+3. 如果有多个输入生命周期参数，但其中一个是 `&self` 或 `&mut self`，那么 self 的生命周期会被赋给所有的输出生命周期参数
+
+```rust
+fn func(s: &str) -> &str { ... }
+fn func<'a>(s: &'a str) -> &str { ... }     // 用了第一个规则
+fn func<'a>(s: &'a str) -> &'a str { ... }  // 用了第二个规则
+```
+
+所有的参数都有了生命周期，所以编译器不会报错。
+
+```rust
+fn longest(x: &str, y: &str) -> &str { ... }
+fn longest<'a, 'b>(x: &'a str, y: &'b str) -> &str { ... }  // 用了第一个规则
+```
+
+由于他不是方法，所以规则三不适用，规则二因为两个输入参数也不适用，导致编译器无法自动推断出输出的生命周期，因此报错。
+
+
+
+# 方法中的生命周期
+
+在 `struct` 上使用生命周期实现方法的语法和范型参数的语法一样，在哪使用生命周期依赖于 **生命周期参数是否和字段，方法的参数，或返回值** 有关。`struct` 字段的生命周期：
+
++ 在 `impl` 后声明，在 `struct` 后使用，生命周期是 struct 的一部分
++ 引用必须绑定 struct 字段引用的生命周期，或者引用是独立的也行
++ 生命周期省略规则经常使得方法中的生命周期标注不是必须的
+
+```rust
+struct NewStruct<'a> {
+  attr: &'a str,
+}
+
+impl<'a> NewStruct<'a> {
+  fn level(&self) -> i32 {
+    3
+  }
+  
+  fn stage(&self, step: &str) -> &str {  // 用了第三个规则
+    println!("attention please: {}", step);
+    self.attr
+  }
+}
+```
+
+
+
+# 静态生命周期
+
+`'static` 是一个特殊的生命周期：整个程序的持续时间，例如所有的字符串字面值都拥有 `'static` 生命周期。但要注意的是，很多时候发现了生命周期的错误应该是尝试调整这些错误，而不是直接定义一个全局的生命周期，这可能导致其他问题。
+
+
+
+# 范型 + 生命周期 + Trait Bound
+
+```rust
+use std::fmt::Display;
+
+fn example<'a, T>(x: &'a str, y: &'a str, ann: T) -> &'a str
+where T: Display,
+{
+  println!("Hello world! {}", ann);
+  if x.len() > y.len() {
+    x
+  } else {
+    y
+  }
+}
+```
+
+由于 **生命周期也是属于范型的一种**，合起来定义的时候就直接全部装入 `< >` 即可！
