--- a/notes/01_环境与基本概念.md
+++ b/notes/01_环境与基本概念.md
@@ -1,5 +1,7 @@
 # 概述
-学习影片来源：[Rust 编程语言入门教程 [2021\]](https://www.youtube.com/watch?v=e3-2uxHhbzs&list=PL3azK8C0kje1DUJbaOqce19j3R_-tIc4_)
+学习影片来源 1：[Rust 编程语言入门教程 2021](https://www.youtube.com/watch?v=e3-2uxHhbzs&list=PL3azK8C0kje1DUJbaOqce19j3R_-tIc4_)
+
+学习影片来源 2：[From Python to Rust](https://www.youtube.com/watch?v=7odJDwhjCXQ&list=PLEIv4NBmh-GsWGE9mY3sF9c5lgh5Z_jLr)
 
 
 
